--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #
 # This file contains configuration flags to customize your site
 #
-
+url : http://sapphirus15.github.io
 # Name of your site (displayed in the header)
 name: Sungmin Yoon
 
